# controllers/apiserver/fshandlers/api_fs_create_post.go
@@ -4,11 +4,21 @@ import (
 	"context"
 
 	"github.com/gbh007/hgraber-next/controllers/apiserver/apiservercore"
+	"github.com/gbh007/hgraber-next/domain/fsmodel"
 	"github.com/gbh007/hgraber-next/openapi/serverapi"
 )
 
-func (c *FSHandlersController) APIFsCreatePost(ctx context.Context, req *serverapi.FileSystemInfo) (serverapi.APIFsCreatePostRes, error) {
-	id, err := c.fsUseCases.NewFileStorage(ctx, apiservercore.ConvertFileSystemInfoFromAPI(req))
+func (c *FSHandlersController) APIFsCreatePost(ctx context.Context, req *serverapi.APIFsCreatePostReq) (serverapi.APIFsCreatePostRes, error) {
+	id, err := c.fsUseCases.NewFileStorage(ctx, fsmodel.FileStorageSystem{
+		Name:                req.Name,
+		Description:         req.Description.Value,
+		AgentID:             req.AgentID.Value,
+		Path:                req.Path.Value,
+		DownloadPriority:    req.DownloadPriority,
+		DeduplicatePriority: req.DeduplicatePriority,
+		HighwayEnabled:      req.HighwayEnabled,
+		HighwayAddr:         apiservercore.UrlFromOpt(req.HighwayAddr),
+	})
 	if err != nil {
 		return &serverapi.APIFsCreatePostInternalServerError{
 			InnerCode: apiservercore.FSUseCaseCode,
